feat(blocking-websites): block during study and unblock during pause

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,5 +6,12 @@
   "action": {
     "default_popup": "ui/popup/popup.html"
   },
-  "permissions": ["scripting", "activeTab", "tabs", "storage"]
+  "permissions": [
+    "scripting",
+    "activeTab",
+    "tabs",
+    "storage",
+    "declarativeNetRequest"
+  ],
+  "host_permissions": ["<all_urls>"]
 }
