Refactor: General cleanup and code organization

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "description": "Blocks distracting websites for a set period to help you stay focused.",
   "version": "1.0",
   "action": {
-    "default_popup": "ui/popup/popup.html"
+    "default_popup": "popup/popup.html"
   },
   "permissions": [
     "scripting",
